# matilda-sc

./: .gitignore  404.html  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api-python/: index.html
api-r/: index.html
citation/: index.html
colab/: tutorial-python.ipynb
docs-site/: mkdocs.yml
docs-site/docs/: api-python.md  api-r.md  citation.md  index.md  installation.md  overview.md  quickstart.md  tutorial-python.ipynb  tutorial-r.md
docs-site/docs/stylesheets/: extra.css
docs-site/overrides/: 404.html  main.html
docs-site/scripts/: gen_colab_notebooks.py
installation/: index.html
javascripts/: animations.js
overview/: index.html
quickstart/: index.html
search/: search_index.json
src/matilda/: __init__.py  api.py  main_matilda_rna_task.py  main_matilda_rna_train.py  main_matilda_task.py  main_matilda_train.py  util.py
tests/: verify_api.py  verify_api_tasks.py  verify_classify.py  verify_full.py  verify_io.py  verify_numeric_labels.py  verify_transfer.py
tutorial-python/: index.html  tutorial-python.ipynb
tutorial-r/: index.html
